--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,6 +2,7 @@
 <html>
 <head>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="/css/style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<title>New Blog App</title>
@@ -152,6 +153,8 @@
 
   </div>
 </div>
+
+<!-- Post Modal -->
 
 
 <div id="myModal2" class="modal fade" role="dialog">
