--- a/views/post.erb
+++ b/views/post.erb
@@ -5,7 +5,7 @@
 			</div>
 	<div>
 		<label for="content">Post Content</label>
-			<input type="text" name="content">
+			<input type="text" name="content" maxlength="150" class="post">
 				</div>
 
 	<input type="submit" value="Post It!">
