--- a/views/home.erb
+++ b/views/home.erb
@@ -1,1 +1,6 @@
+<h2>Welcome to the blog site!</h2>
+
+
+
+
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, minima, atque. Quam unde numquam velit voluptates inventore atque assumenda ut neque nobis accusamus dolore temporibus enim magnam, esse aperiam Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae laudantium ea culpa veritatis odio perspiciatis placeat magni ex esse quaerat consequuntur nemo asperiores, eius quidem deserunt, maiores, qui odit excepturi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere quo dolores adipisci maxime in sunt, molestias cum, id molestiae corporis neque accusamus rem veritatis ea nam impedit. Accusamus libero, rerum.</p>
