--- a/public/css/style.css
+++ b/public/css/style.css
@@ -25,13 +25,14 @@ h1 a {
   margin-top: 19px; }
 
 .content {
-  background-color: whitesmoke;
+  background-color: rgba(100, 100, 100, 0.3);
   border-radius: 8px;
   border: 1px solid black;
-  color: gray;
+  color: whitesmoke;
   font-family: helvetica;
   padding-left: 30px;
-  padding-bottom: 10px; }
+  padding-bottom: 10px;
+  margin-top: 20px; }
 
 .feed {
   background-color: whitesmoke;
@@ -43,7 +44,9 @@ h1 a {
   width: 100%; }
 
 .modal-content {
-  background-color: rgba(255, 0, 0, 0.3);
+  background-color: rgba(63, 117, 151, 0.3);
   color: white; }
+  .modal-content input {
+    color: black; }
 
 /*# sourceMappingURL=style.css.map */
