--- a/scss/style.scss
+++ b/scss/style.scss
@@ -46,14 +46,18 @@ h1 {
 
 
 .content {
-	background-color: whitesmoke;
+	background-color: rgba(100,100,100,0.3);
 	border-radius: 8px;
 	border: 1px solid black;
-	color: gray;
+	color: whitesmoke;
 	font-family: helvetica;
 	padding-left: 30px;
 	padding-bottom: 10px;
+	margin-top: 20px;
+
 }
+
+
 
 
 .feed {
@@ -68,7 +72,14 @@ h1 {
 }
 
 .modal-content {
-	background-color: rgba(255, 0, 0, 0.3);
+	background-color: rgba(63, 117, 151, 0.3);
 	color: white;
+	input {
+		color:black;
+	}
 }
+
+
+// footer
+
 
