removed container from post feed. Made posts fit within container

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -54,6 +54,20 @@ h1 {
 	padding-left: 30px;
 	padding-bottom: 10px;
 	margin-top: 20px;
+	width: 100%;
+
+}
+
+.post-title {
+	font-family: sans-serif;
+	color:red;
+	font-size: 24px;
+	border-bottom: 1px solid black;
+}
+
+.post-content {
+	color: blue;
+	font-size: 16px;
 
 }
 
