--- a/public/css/style.css
+++ b/public/css/style.css
@@ -32,7 +32,18 @@ h1 a {
   font-family: helvetica;
   padding-left: 30px;
   padding-bottom: 10px;
-  margin-top: 20px; }
+  margin-top: 20px;
+  width: 100%; }
+
+.post-title {
+  font-family: sans-serif;
+  color: red;
+  font-size: 24px;
+  border-bottom: 1px solid black; }
+
+.post-content {
+  color: blue;
+  font-size: 16px; }
 
 .feed {
   background-color: whitesmoke;
