--- a/views/update.erb
+++ b/views/update.erb
@@ -26,3 +26,8 @@ Password: <%= current_user.password%><br>
 
 
 </form>
+
+<form method="POST" action="/user/:id/destroy">
+<input type="submit" value="Destroy User">
+
+</form>
