--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,19 +7,23 @@ body {
 h1 a {
   font-family: 'Bungee Shade', cursive; }
 
-.nav-row .btn {
-  background-color: white;
-  color: black;
-  border: 1px solid black; }
-  .nav-row .btn a {
-    color: black;
-    text-decoration: none; }
-.nav-row h1 {
-  color: white; }
-  .nav-row h1 a {
+.nav-row {
+  padding-right: 10px; }
+  .nav-row .btn {
+    background-color: rgba(0, 0, 0, 0.3);
     color: white;
-    text-decoration: none;
-    font-size: 32px; }
+    border: 1px solid black; }
+    .nav-row .btn a {
+      color: white;
+      text-decoration: none; }
+  .nav-row h1 {
+    color: white; }
+    .nav-row h1 a {
+      color: white;
+      text-decoration: none;
+      font-size: 32px; }
+    .nav-row h1 span {
+      color: #3f7597; }
 
 .navigation {
   margin-top: 19px; }
@@ -56,7 +60,8 @@ h1 a {
 
 .modal-content {
   background-color: rgba(63, 117, 151, 0.3);
-  color: white; }
+  color: white;
+  text-align: center; }
   .modal-content input {
     color: black; }
 
