--- a/views/new_user.erb
+++ b/views/new_user.erb
@@ -1,20 +1,24 @@
-<h1>Create A User</h1>
 
 <form method ="POST" action="new_user/create">
 
+
 <div>
-	<input type="text" name="username"> Username
+	<label for="email">Email</label>
+	<input type="text" name ="email">
 </div>
 <div>
-	<input type="text" name ="email">Email
+	<label for="username">Username</label>
+	<input type="text" name="username">
+</div>
+
+
+<div>
+	<label for="password">Password</label>
+	<input type="text" name="password">
 </div>
 
 <div>
-	<input type="text" name="password">Password
-</div>
-
-<div>
-	<input type="submit">
+	<input type="submit" value="Create">
 </div>
 
 </form>
