--- a/views/post.erb
+++ b/views/post.erb
@@ -1,9 +1,9 @@
 <form method="POST" action="/posts/create">
-<div class="post-title">
+<div class="new-post-title">
 	<label for="title">Post Title</label>
 		<input type="text" name="title">
 			</div>
-	<div class="post-content">
+	<div class="new-post-content">
 		<label for="content">Post Content</label>
 			<input type="text" name="content" maxlength="150" class="post">
 				</div>
