--- a/views/update.erb
+++ b/views/update.erb
@@ -14,20 +14,20 @@ Password: <%= current_user.password%><br>
 <form method="POST" action="/user/<%= @user.id %>/update">
 
 	<label for="name">Username</label>
-	<input type="text" name="username" placeholder="<%= @user.username %>" value="<%= @user.username %>">
+		<input type="text" name="username" placeholder="<%= @user.username %>" value="<%= @user.username %>">
 	<br>
 	<label for="email">Email</label>
-	<input type="text" name="email" placeholder="<%= @user.email %>" value="<%= @user.email %>">
+		<input type="text" name="email" placeholder="<%= @user.email %>" value="<%= @user.email %>">
 	<br>
 	<label for="password">Password</label>
-	<input type="text" name="password" placeholder="<%= @user.password %>" value="<%= @user.password %>">
+		<input type="text" name="password" placeholder="<%= @user.password %>" value="<%= @user.password %>">
 	<br>
-	<input type="submit">
+		<input type="submit">
 
 
 </form>
 
 <form method="POST" action="/user/:id/destroy">
-<input type="submit" value="Destroy User">
+<input type="submit" value="Destroy User" class="btn btn-info">
 
 </form>
