--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,9 @@
+$text-color: rgba(63, 117, 151, 1);
+$text-color-faded: rgba(63, 117, 151, 0.3);
+$link-font: arial, bold;
+
+
+
 body {
 	background-image: url("/images/blog.jpg");
 	background-size: 100% 100%;
@@ -21,9 +27,11 @@ h1 {
 
 
 	.btn {
-		background-color: rgba(0,0,0,0.3);
+		background-color: $text-color;
 		color: white;
 		border: 1px solid black;
+		font-family: $link-font;
+		font-size: 14px;
 
 
 
@@ -49,14 +57,14 @@ h1 {
 }
 
 .navigation {
-	margin-top: 19px;
+	margin-top: 22px;
 
 }
 
 
 .content {
-	background-color: rgba(100,100,100,0.3);
-	border-radius: 8px;
+	background-color: $text-color-faded;
+	border-radius: 3px;
 	border: 1px solid black;
 	color: whitesmoke;
 	font-family: helvetica;
@@ -76,7 +84,7 @@ h1 {
 }
 
 .post-content {
-	color: rgba(63,117,151,1);
+	color: $text-color;
 	font-size: 16px;
 
 }
