--- a/views/user.erb
+++ b/views/user.erb
@@ -1,9 +1,8 @@
 
 <div class="row">
   <div class="col-md-4">
-  <nav class="navbar navbar-light bg-faded">
-    <h2 class="navbar-brand mb-0"><%= current_user.username %>'s Posts</h2>
-  </nav>
+    <h2 class="navbar-brand mb-0"><%= current_user.username %>'s Notes</h2>
+
   </div>
 
 </div>
